# crucible

./: .gitattributes  .gitignore  LEARNING_PLAN.md  PROJECT_IDEAS.md  README.md  pyproject.toml  up.sh
homelab/: .gitignore  (+7 more)
launcher/: README.md  pyproject.toml
launcher/crucible_launcher/: __main__.py  cli.py  doctor.py  installer.py  registry.py  runner.py  tui.py
launcher/crucible_launcher/manifests/: _categories.toml  aircrack_mac.toml  aircrack_win.toml  amass.toml  anonsurf_mac.toml  anonsurf_win.toml  bettercap.toml  burp_suite.toml  ffuf.toml  firejail_mac.toml  firejail_win.toml  ghidra.toml  gobuster.toml  hashcat.toml  httpx.toml  hydra.toml  john.toml  masscan.toml  metasploit.toml  mitmproxy.toml  nikto.toml  nmap.toml  nuclei.toml  observatory.toml  parrot_shell.toml  poison_page.toml  radare2.toml  redbox.toml  redbox_tui.toml  sqlmap.toml  subfinder.toml  volatility.toml  wireshark.toml
redbox/: .coverage  .env.example  README.md  cli.py  pyproject.toml
redbox/agents/: goal_hijack.py  memory.py  memory_poisoner.py  tools.py
redbox/alignment/: conditional_behavior.py  eval_mode_prober.py  eval_vs_deploy.py
redbox/behavior/: bias.py  capability.py
redbox/browser/: __init__.py  dom_injector.py  fake_chrome.py  sandbox.py  ui_redress.py
redbox/code/: dep_confusion.py  license_launderer.py  pkg_hallucinator.py  secret_completer.py
redbox/core/: budget.py  ch_sink.py  judge.py  mutator.py  replay.py  results.py  runner.py  sinks.py  target.py  telemetry.py  types.py  vector.py
redbox/defense/: __init__.py  input_classifier.py
redbox/extract/: __init__.py  pii.py  train_data.py
redbox/finetune/: cross_tenant_canary.py  pre_post_diff.py
redbox/governance/: __init__.py  provenance_attacker.py
redbox/infra/: __init__.py  batch_cross_talk.py  cache_timing.py  context_flood.py  tool_loop.py
redbox/judges/: ensemble.py  llm_refusal.py  regex_refusal.py
redbox/mutators/: many_shot.py
redbox/payloads/: loader.py
redbox/privacy/: membership.py
redbox/rag/: citation_launderer.py  collider.py  cross_tenant.py
redbox/reasoning/: cot_leaker.py  faithfulness.py  reasoning_jailbreak.py
redbox/recipes/: behavior_bench.py  code_bench.py  computer_use_bench.py  defense_bench.py  extract_bench.py  extract_bench_pro.py  finetune_bench.py  gen_bench.py  indirect_bench.py  rag_bench.py  reasoning_bench.py  research_bench.py  swarm_bench.py
redbox/redbox/: cli.py  cli_recipes.py
redbox/reporters/: __init__.py  audit.py  diff_viewer.py  html_reporter.py  json_reporter.py  terminal_reporter.py
redbox/sessions/: attacker_loop.py  crescendo.py  gaslighter.py  multiturn.py  persona.py
redbox/specialty/: __init__.py  language_arbitrage.py  logit_bias.py
redbox/supply/: lora_swapper.py
redbox/swarm/: bus_tap.py  swarm_target.py
redbox/targets/: anthropic.py  openai_compat.py
redbox/tests/: test_agents.py  test_alignment.py  test_anthropic_target.py  test_browser.py  test_budget.py  test_cli.py  test_cli_recipes.py  test_code.py  test_crescendo.py  test_ensemble.py  test_extract.py  test_finetune.py  test_g_h_sections.py  test_gen.py  test_governance.py  test_indirect_bench.py  test_integrations.py  test_j_k_sections.py  test_many_shot.py  test_multimodal.py  test_p_q_sections.py  test_pipeline.py  test_plugin_foundation.py  test_rag.py  test_rag_attacks.py  test_reasoning.py  test_regex_judge_unicode.py  test_replay.py  test_reporters.py  test_results_postgres.py  test_smoke.py  test_supply.py  test_swarm.py  test_target_http.py  test_text_mutators.py  test_tui.py  test_tui_pipeline.py  test_tui_screens.py  test_vectors.py
redbox/tui/: __init__.py  app.py
redbox/vectors/: __init__.py  audio.py  ics.py  office.py  pdf.py  screenshot.py
(+406 files in other folders)
