[project]
name = "crucible-launcher"
version = "0.1.0"
description = "Crucible launcher — Parrot-style categorized menu over the local tool suite"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.79",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
crux = "crucible_launcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crucible_launcher"]
