[project]
name = "redbox"
version = "0.2.0"
description = "LLM red team bench — full A–V coverage + Textual TUI"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
vectors = [
    "reportlab>=4.0",
    "pypdf>=4.0",
]
rag = [
    "chromadb>=0.4",
    "sentence-transformers>=2.5",
]
multimodal = [
    "Pillow>=10.0",
    "numpy>=1.26",
]
docs = [
    "python-docx>=1.1",
    "openpyxl>=3.1",
]
tui = [
    "textual>=0.74",
]
browser = [
    "playwright>=1.45",
]
anthropic = [
    "anthropic>=0.40",
]

[project.scripts]
redbox = "redbox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["redbox"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "SIM",               # simplify
    "RUF",               # ruff-specific
]
ignore = [
    "E501",   # line length — formatter's job
    "B008",   # function calls in defaults — typer pattern
    "SIM108", # ternary if/else
    "RUF012", # mutable class defaults — dataclass pattern
    "B904",   # raise from — explicit re-raise without "from" is fine
    "RUF001", # ambiguous unicode (em-dashes used deliberately in prose)
    "RUF002",
    "RUF003",
    "RUF059", # unused unpacked variables in tests are common (store, run = ...)
    "UP042",  # str+Enum vs StrEnum — keep current shape; switching changes __str__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.coverage.run]
branch = true
source = ["redbox"]
omit = [
    "redbox/specialty/steering.py",   # heavy torch path, integration only
    "redbox/tui/app.py",               # Textual app, exercised by Pilot tests
]

[tool.coverage.report]
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
